src/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_arrays.ts_function_FunctionDeclarationID(39).snap
---
source: src/ir.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_14
block_14 -> [block_15, ]
