src/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_borrow_after_loop.ts_function_FunctionDeclarationID(38).snap
---
source: src/ir.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_10
block_10 -> [block_13, ]
block_13 -> [block_16, block_21, ]
block_16 -> [block_13, ]
