src/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_borrow_existing_variable_after_loop.ts_function_FunctionDeclarationID(48).snap
---
source: src/ir.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_10
block_10 -> [block_15, ]
block_15 -> [block_18, block_27, ]
block_18 -> [block_22, block_24, ]
block_22 -> [block_23, ]
block_23 -> [block_15, ]
block_24 -> [block_23, ]
