src/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_if_else_borrow_in_both_branches.ts_function_FunctionDeclarationID(19).snap
---
source: src/ir.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_1
block_1 -> [block_10, block_13, ]
block_10 -> [block_12, ]
block_13 -> [block_12, ]
