src/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_loop_borrow.ts_function_FunctionDeclarationID(44).snap
---
source: src/ir.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_10
block_10 -> [block_19, ]
block_19 -> [block_22, block_27, ]
block_22 -> [block_19, ]
