src/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_loop_borrow_and_move.ts_function_FunctionDeclarationID(39).snap
---
source: src/ir.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_10
block_10 -> [block_15, ]
block_15 -> [block_18, block_23, ]
block_18 -> [block_15, ]
