src/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_loop_move.ts_function_FunctionDeclarationID(36).snap
---
source: src/ir.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_10
block_10 -> [block_15, ]
block_15 -> [block_18, block_21, ]
block_18 -> [block_15, ]
