src/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_move_existing_variable_after_loop.ts_function_FunctionDeclarationID(32).snap
---
source: src/ir.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_10
block_10 -> [block_13, ]
block_13 -> [block_17, block_18, ]
block_17 -> [block_13, ]
